--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 /*
-	Theme Name:   BE Starter
-	Description:  Hybrid WordPress Starter Theme
-	Theme URI:    https://github.com/billerickson/BE-Starter/
-	Author:       Bill Erickson
-	Author URI:   https://www.billerickson.net
+	Theme Name:   Stalwart
+	Description:  Hybrid WordPress Theme for CSU
+	Theme URI:    https://github.com/CSUWebServices/stalwart
+	Author:       CSU Web Services
+	Author URI:   https://it.colostate.edu/web/
 	Update URI:   false
 	Version:      1.0.0
 	License:      GPL-2.0+
